fix: log conf & fmt